style: apply OpenRewrite formatting and code standards
- Update license headers to CUI-OpenSource-Software 2025 format
- Add missing license headers to package-info.java files
- Apply AutoFormat (imports, whitespace, indentation)
- Apply AnnotationNewlineFormat (annotations on separate lines)
- Fix CuiLogger standards (naming, placeholders, exception positioning)
- Convert LogRecord .format() to method references where applicable

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>