@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -29,7 +29,6 @@ import jakarta.faces.application.FacesMessage;
 import jakarta.faces.application.FacesMessage.Severity;
 import jakarta.faces.context.FacesContext;
 import jakarta.faces.render.FacesRenderer;
-import jakarta.faces.render.Renderer;
 
 import java.io.IOException;
 import java.util.List;
@@ -128,7 +127,7 @@ public class CuiMessageRenderer extends BaseDecoratorRenderer<CuiMessageComponen
             var messages = component.readMessages();
             if (!messages.isEmpty()) {
                 if (messages.size() == 1) {
-                    writeFacesMessage(messages.get(0), component, writer);
+                    writeFacesMessage(messages.getFirst(), component, writer);
                 } else {
                     writeFacesMessages(messages, component, writer);
                 }
