@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -87,7 +87,7 @@ public class CssRule implements Serializable {
 
         final var splitToList = Splitter.on("{").trimResults().omitEmptyStrings().splitToList(checked);
 
-        final var cssSelector = splitToList.get(0).trim();
+        final var cssSelector = splitToList.getFirst().trim();
 
         return new CssRule(cssSelector, parseDeclarations(splitToList.get(1)));
     }
@@ -106,7 +106,7 @@ public class CssRule implements Serializable {
 
             if (splittedPair.size() == 2) {
 
-                final var key = splittedPair.get(0).toLowerCase();
+                final var key = splittedPair.getFirst().toLowerCase();
                 result.putIfAbsent(key, splittedPair.get(1));
 
             }
