@@ -1,12 +1,12 @@
 /*
- * Copyright 2023 the original author or authors.
- * <p>
+ * Copyright © 2025 CUI-OpenSource-Software (info@cuioss.de)
+ *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
  * You may obtain a copy of the License at
- * <p>
- * https://www.apache.org/licenses/LICENSE-2.0
- * <p>
+ *
+ *     http://www.apache.org/licenses/LICENSE-2.0
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -91,7 +91,7 @@ import java.util.List;
 @SuppressWarnings("java:S5960") // Assertions are intended to be used in test code. This is test code.
 public class MessageProducerMock implements MessageProducer {
 
-    private static final CuiLogger log = new CuiLogger(MessageProducerMock.class);
+    private static final CuiLogger LOGGER = new CuiLogger(MessageProducerMock.class);
 
     @Serial
     private static final long serialVersionUID = -7244733672736029893L;
@@ -127,7 +127,7 @@ public class MessageProducerMock implements MessageProducer {
     public void assertSingleGlobalMessageWithKeyPresent(final String expectedKey) {
         var messagesAsString = createStringViewMessage(globalMessages);
         assertEquals(1, globalMessages.size(), "Expected one message, but was " + messagesAsString);
-        assertEquals(expectedKey, globalMessages.get(0).getSummary());
+        assertEquals(expectedKey, globalMessages.getFirst().getSummary());
     }
 
     /**
@@ -214,7 +214,7 @@ public class MessageProducerMock implements MessageProducer {
 
         for (FacesMessage message : globalMessages) {
             if (message.getSummary().contains(partialText)) {
-                log.debug("Message '{}' found, returning", message);
+                LOGGER.debug("Message '%s' found, returning", message);
                 return;
             }
         }
